Closed Bug 934261 Opened 11 years ago Closed 11 years ago

[10.9] CoreText performance note: Client called CTFontCreateWithName() using name "Lucida Grande" and got font with PostScript name "LucidaGrande"

Categories

(Core :: Graphics: Text, defect)

x86
macOS
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla28
Tracking Status
firefox25 --- wontfix
firefox26 --- wontfix
firefox27 --- verified
firefox28 --- verified
firefox-esr17 --- wontfix
firefox-esr24 --- wontfix

People

(Reporter: cpeterson, Assigned: cpeterson)

References

Details

Attachments

(1 file)

STR: 1. Run Firefox from the command line on OS X 10.9 2. Load http://www.cnn.com/2013/11/01/tech/social-media/facebook-teens 3. Watch stdout for CoreText warnings: CoreText performance note: Client called CTFontCreateWithName() using name "Lucida Grande" and got font with PostScript name "LucidaGrande". For best performance, only use PostScript names when calling this API. CoreText performance note: Set a breakpoint on CTFontLogSuboptimalRequest to debug. 4. Load http://news.cnet.com/8301-1023_3-57610353-93/mystery-google-barge-will-be-invite-only-google-x-showroom-says-report 5. Watch stdout for CoreText warnings from Flash plugin. I think these warnings originate from Adobe's code, so there is nothing we can do about them. plugin-container[23935:303] CoreText performance note: Client called CTFontCreateWithName() using name "Times Roman" and got font with PostScript name "Times-Roman". For best performance, only use PostScript names when calling this API. plugin-container[23935:303] CoreText performance note: Client called CTFontCreateWithName() using name "Arial" and got font with PostScript name "ArialMT". For best performance, only use PostScript names when calling this API. This warning is apparently new in OS X 10.9: * Chrome bug for same warning: http://code.google.com/p/chromium/issues/detail?id=312436 * Reports for other applications: https://google.com/search?q=CoreText%20performance%20note%20Client%20called%20CTFontCreateWithName%20using%20name%20For%20best%20performance%20only%20use%20PostScript%20names%20when%20calling%20this%20API
Attachment #826488 - Flags: review?(jdaggett)
Attachment #826488 - Flags: review?(jdaggett) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Summary: CoreText performance note: Client called CTFontCreateWithName() using name "Lucida Grande" and got font with PostScript name "LucidaGrande" → [10.9] CoreText performance note: Client called CTFontCreateWithName() using name "Lucida Grande" and got font with PostScript name "LucidaGrande"
Comment on attachment 826488 [details] [diff] [review] CTFontCreateWithName_LucidaGrande.patch [Approval Request Comment] Bug caused by (feature/regressing bug #): bug 705594 (Firefox 13) User impact if declined: Warning messages logged to stderr on OS X 10.9 (which are not seen by non-developers) and negligible performance impact on loading time of fallback font. Testing completed (on m-c, etc.): m-c Risk to taking this patch (and alternatives if risky): None known because OS X has bundled the standard "LucidaGrande" font since 1999. String or IDL/UUID changes made by this patch: N/A
Attachment #826488 - Flags: approval-mozilla-aurora?
Attachment #826488 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Seems unlikely this is going to get approval for esr24. The status should probably be set to wontfix.
Keywords: verifyme
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.9; rv:27.0) Gecko/20100101 Firefox/27.0 Verified as fixed on latest Aurora 27.0a2 (buildID: 20131202004002) using the STR from comment 0.
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.9; rv:28.0) Gecko/20100101 Firefox/28.0 Verified as fixed on latest Aurora 28.0a2 (Build ID: 20131212004008).
Status: RESOLVED → VERIFIED
Keywords: verifyme
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: