Bug 934261 - Use PostScript font name "LucidaGrande" for CoreText fallback. r=jdaggett a=bajaj

--HG--
extra : transplant_source : %D6%24%C5H%C6%8F%B4%B8%F6%C6fy%A3%8D%DB%02%A6%CD%AF%7E